# BookFiler-Module-HTTP

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  README.md
docs/: cookies.md
include/: BookFilerModuleHttpLoader.hpp
include/BookFiler-Module-HTTP/: Interface.hpp
reference/: readme.md
resources/: dh.pem  key.pem
resources/templates/: in.json  in.mustache
resources/www/: example.html  index.html
settings/: settings.json
src/: Module.cpp  Module.hpp  SshModule.cpp  SshModule.hpp
src/core/: Client.cpp  Client.hpp  Curl.cpp  Curl.hpp  PortForwardingServer.cpp  PortForwardingServer.hpp  PortForwardingServerConnection.cpp  PortForwardingServerConnection.hpp  PortForwardingServerListener.cpp  PortForwardingServerListener.hpp  PortForwardingServerState.hpp  PortForwardingUtil.cpp  PortForwardingUtil.hpp  Request.cpp  Request.hpp  RequestCookie.cpp  RequestCookie.hpp  RequestCookieMap.cpp  RequestCookieMap.hpp  RequestUserAgent.cpp  RequestUserAgent.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  ServerConnection.cpp  ServerConnection.hpp  ServerListener.cpp  ServerListener.hpp  ServerRoute.cpp  ServerRoute.hpp  ServerSession.cpp  ServerSession.hpp  ServerState.cpp  ServerState.hpp  ServerUtil.cpp  ServerUtil.hpp  Template.cpp  Template.hpp  Url.cpp  (+58 more)
src/ssh/: config.hpp
src_example/http-client-json/: CMakeLists.txt  main.cpp
src_example/http-connect/: CMakeLists.txt  main.cpp
src_example/http-server/: CMakeLists.txt  main.cpp
src_example/http-server-beast/: CMakeLists.txt
src_example/http-server-complex/: CMakeLists.txt  main.cpp
src_example/http-server-cookie/: CMakeLists.txt  main.cpp
src_example/http-server-minimal/: CMakeLists.txt  main.cpp
src_example/http-server-template/: CMakeLists.txt  main.cpp
src_example/http-server-userAgent/: CMakeLists.txt  main.cpp  main.cpp.autosave
src_example/oauth2-google/: CMakeLists.txt  main.cpp
